Fixed height of testimonials so that text below doesn't shift with different carousel slides

--- a/css/main.css
+++ b/css/main.css
@@ -138,7 +138,7 @@ p{
 
 /* CAROUSEL */
 #carouselExampleIndicators{
-  /*height: 150px;*/
+  height: 150px;
   display: flex;
   align-items: center;
 }
